force-app/main/default/objects/Case/fields/Additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes__c</fullName>
    <label>Additional notes</label>
    <type>TextArea</type>
</CustomField>