force-app/main/default/objects/Case/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <inlineHelpText>Check booking ID in Traveller</inlineHelpText>
    <label>Booking ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>