force-app/main/default/objects/Case/fields/BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>BusinessArea__c</fullName>
    <inlineHelpText>Always populate with a value - for reporting</inlineHelpText>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK Sites</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>External Website - Pitch Availability</fullName>
            </value>
            <value>
                <fullName>Club Care</fullName>
            </value>
            <value>
                <fullName>RAC</fullName>
            </value>
            <value>
                <fullName>Ready Camp</fullName>
            </value>
            <value>
                <fullName>Self Catering</fullName>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Website / App</fullName>
            </value>
            <value>
                <fullName>Holiday Homes</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Marketing / Comms</fullName>
            </value>
            <value>
                <fullName>Exempted</fullName>
            </value>
            <value>
                <fullName>Spam/Out of Office</fullName>
            </value>
            <value>
                <fullName>Technical Team</fullName>
            </value>
            <value>
                <fullName>Club Unit Event</fullName>
            </value>
            <value>
                <fullName>Certificated Site</fullName>
            </value>
            <value>
                <fullName>CiTF</fullName>
                <isActive>false</isActive>
                <label>CiTF</label>
            </value>
            <value>
                <fullName>Travel Services</fullName>
                <isActive>false</isActive>
                <label>Travel Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>