force-app/main/default/objects/Case/fields/CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>CaseCategory__c</fullName>
    <inlineHelpText>Always populate with a value - for reporting</inlineHelpText>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Systems</fullName>
                <default>true</default>
                <label>Systems</label>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Policies</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Request for Info</fullName>
            </value>
            <value>
                <fullName>Positive Feedback</fullName>
            </value>
            <value>
                <fullName>Service Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>