force-app/main/default/objects/Case/fields/CaseSubmitted__c.field-meta.xml
<CustomField>
    <fullName>CaseSubmitted__c</fullName>
    <label>CaseSubmitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>