force-app/main/default/objects/Case/fields/Closed_by__c.field-meta.xml
<CustomField>
    <fullName>Closed_by__c</fullName>
    <formula>IF((IsClosed = TRUE), $User.FirstName+&apos; &apos;+$User.LastName, &apos;&apos;)</formula>
    <label>Closed by</label>
    <type>Text</type>
</CustomField>