force-app/main/default/objects/Case/fields/ClosedThisHour__c.field-meta.xml
<CustomField>
    <fullName>ClosedThisHour__c</fullName>
    <formula>IF ((FLOOR ((NOW() - ($System.OriginDateTime)) * 24) / 24)  - 
( ClosedDate - ($System.OriginDateTime)) &lt;= 0.042, &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed This Hour</label>
    <type>Text</type>
</CustomField>