force-app/main/default/objects/Case/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>