force-app/main/default/objects/Case/fields/GoodwillVoucherRefund__c.field-meta.xml
<CustomField>
    <fullName>GoodwillVoucherRefund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund</label>
    <type>Checkbox</type>
</CustomField>