force-app/main/default/objects/Case/fields/HybridMembershipNumber__c.field-meta.xml
<CustomField>
    <fullName>HybridMembershipNumber__c</fullName>
    <formula>Account.Hybrid_Membership_Number__c</formula>
    <label>Hybrid Membership Number</label>
    <type>Text</type>
</CustomField>