force-app/main/default/objects/Case/fields/Non_Member__c.field-meta.xml
<CustomField>
    <fullName>Non_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allow us to identify if a case has been created for a non member. Used in automation. Do Not Delete!</description>
    <label>Non Member?</label>
    <type>Checkbox</type>
</CustomField>