force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Always populate this field, for reporting purposes</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amend Personal Details</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Breakdown</fullName>
            </value>
            <value>
                <fullName>Brittany Ferries</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>CHH</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Dirty Facilities</fullName>
                <label>Cleanliness</label>
            </value>
            <value>
                <fullName>Club Action</fullName>
            </value>
            <value>
                <fullName>Condor Ferries</fullName>
            </value>
            <value>
                <fullName>DFDS</fullName>
            </value>
            <value>
                <fullName>Eurotunnel</fullName>
            </value>
            <value>
                <fullName>General Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Irish Ferries</fullName>
            </value>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>Log-in</fullName>
            </value>
            <value>
                <fullName>Long Stay</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>P &amp; O Ferries</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Positive Feedback</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Stenna Line</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Technical Enquiry</fullName>
            </value>
            <value>
                <fullName>Tired Facilities</fullName>
                <label>Tiredness</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>