force-app/main/default/objects/Case/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adgestone</fullName>
            </value>
            <value>
                <fullName>Aldridge Hill</fullName>
            </value>
            <value>
                <fullName>Alton, The Star</fullName>
            </value>
            <value>
                <fullName>Ashbourne</fullName>
            </value>
            <value>
                <fullName>Ashurst</fullName>
            </value>
            <value>
                <fullName>Bakewell</fullName>
            </value>
            <value>
                <fullName>Bala</fullName>
            </value>
            <value>
                <fullName>Barnard Castle</fullName>
            </value>
            <value>
                <fullName>Beadnell Bay</fullName>
            </value>
            <value>
                <fullName>Bellingham</fullName>
            </value>
            <value>
                <fullName>Blackmore</fullName>
            </value>
            <value>
                <fullName>Boroughbridge</fullName>
            </value>
            <value>
                <fullName>Bowness in Windermere</fullName>
            </value>
            <value>
                <fullName>Bracelands</fullName>
            </value>
            <value>
                <fullName>Braithwaite Village</fullName>
            </value>
            <value>
                <fullName>Bude</fullName>
            </value>
            <value>
                <fullName>California Cross</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Cannock Chase</fullName>
            </value>
            <value>
                <fullName>Canterbury</fullName>
            </value>
            <value>
                <fullName>Cardigan Bay</fullName>
            </value>
            <value>
                <fullName>Cashel</fullName>
            </value>
            <value>
                <fullName>Charmouth</fullName>
            </value>
            <value>
                <fullName>Cheddar</fullName>
            </value>
            <value>
                <fullName>Chertsey</fullName>
            </value>
            <value>
                <fullName>Chichester</fullName>
            </value>
            <value>
                <fullName>Chipping Norton</fullName>
            </value>
            <value>
                <fullName>Clent Hills</fullName>
            </value>
            <value>
                <fullName>Clitheroe</fullName>
            </value>
            <value>
                <fullName>Cobleland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>