force-app/main/default/objects/Case/fields/Tech_Category__c.field-meta.xml
<CustomField>
    <fullName>Tech_Category__c</fullName>
    <label>Tech Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Buying &amp; Selling</fullName>
            </value>
            <value>
                <fullName>Campsites</fullName>
            </value>
            <value>
                <fullName>Club Business</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Forwarded Enquiries</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Heating Systems</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Modifications</fullName>
                <label>Modifications &amp; Accessories</label>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Satnav</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Stability</fullName>
            </value>
            <value>
                <fullName>Television &amp; Satellite</fullName>
            </value>
            <value>
                <fullName>Towing</fullName>
                <label>Towing &amp; Towbars</label>
            </value>
            <value>
                <fullName>Unit Care</fullName>
            </value>
            <value>
                <fullName>Unit Type</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Wheels &amp; Tyres</fullName>
            </value>
            <value>
                <fullName>Workshop, Repairs &amp; Spares</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
                <isActive>false</isActive>
                <label>Accessories</label>
            </value>
            <value>
                <fullName>Apps &amp; Other Digital</fullName>
                <isActive>false</isActive>
                <label>Apps &amp; Other Digital</label>
            </value>
            <value>
                <fullName>Awnings</fullName>
                <isActive>false</isActive>
                <label>Awnings</label>
            </value>
            <value>
                <fullName>Bicycles</fullName>
                <isActive>false</isActive>
                <label>Bicycles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>