force-app/main/default/objects/Case/fields/Tech_Type__c.field-meta.xml
<CustomField>
    <fullName>Tech_Type__c</fullName>
    <label>Tech Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tech_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>@ 70</fullName>
            </value>
            <value>
                <fullName>12 Volt</fullName>
            </value>
            <value>
                <fullName>12V or 240V?</fullName>
            </value>
            <value>
                <fullName>13 Pin Mis-Alignment</fullName>
            </value>
            <value>
                <fullName>2005 or before</fullName>
            </value>
            <value>
                <fullName>2006-2010</fullName>
            </value>
            <value>
                <fullName>2011-2015</fullName>
            </value>
            <value>
                <fullName>2016-2020</fullName>
            </value>
            <value>
                <fullName>2021-2025</fullName>
            </value>
            <value>
                <fullName>5th wheel caravan</fullName>
            </value>
            <value>
                <fullName>Acceptable Unit Tpes</fullName>
            </value>
            <value>
                <fullName>ACOPS / STGW</fullName>
            </value>
            <value>
                <fullName>Additional Cooling</fullName>
            </value>
            <value>
                <fullName>Addresses &amp; Zipcodes Abroad</fullName>
            </value>
            <value>
                <fullName>Aerial</fullName>
            </value>
            <value>
                <fullName>A Frame</fullName>
            </value>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Alarm</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Awning Types</fullName>
            </value>
            <value>
                <fullName>AWS Complaints</fullName>
            </value>
            <value>
                <fullName>AWS Referral - Fixed / Mobile</fullName>
            </value>
            <value>
                <fullName>Axle</fullName>
            </value>
            <value>
                <fullName>B+E Requirement</fullName>
            </value>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Bike Racks</fullName>
            </value>
            <value>
                <fullName>Bodywork Damage</fullName>
            </value>
            <value>
                <fullName>B Only Licence</fullName>
            </value>
            <value>
                <fullName>Bookings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>