force-app/main/default/objects/Case/fields/Tier1Escalation__c.field-meta.xml
<CustomField>
    <fullName>Tier1Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>