force-app/main/default/objects/Case/fields/Tier2Escalation__c.field-meta.xml
<CustomField>
    <fullName>Tier2Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>