force-app/main/default/objects/Case/fields/Tier3Escalation__c.field-meta.xml
<CustomField>
    <fullName>Tier3Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>