force-app/main/default/objects/Case/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <inlineHelpText>Always populate this field, for reporting purposes</inlineHelpText>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>ACSI</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>Credit / Voucher</fullName>
            </value>
            <value>
                <fullName>Holiday Extras</fullName>
                <isActive>false</isActive>
                <label>Holiday Extras</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>