force-app/main/default/objects/Case/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voucher</label>
    <type>Checkbox</type>
</CustomField>