force-app/main/default/objects/Case/fields/VoucherAmount__c.field-meta.xml
<CustomField>
    <fullName>VoucherAmount__c</fullName>
    <label>Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>