force-app/main/default/objects/Case/recordTypes/Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Use for all cases except for Technical cases</description>
    <label>Case Record Type</label>
</RecordType>