force-app/main/default/objects/Case/recordTypes/Confidential_Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Confidential_Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Record Type used for restricted Public Group access to Cases</description>
    <label>Confidential Case Record Type</label>
</RecordType>