force-app/main/default/objects/Case/recordTypes/European_Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>European_Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Overseas inbox cases</description>
    <label>European Case Record Type</label>
</RecordType>