force-app/main/default/objects/Case/recordTypes/Technical_Team_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Technical_Team_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Use for Technical Cases</description>
    <label>Technical Team Record Type</label>
</RecordType>