force-app/main/default/objects/Case/validationRules/Voucher_Amount_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Voucher_Amount_required</fullName>
    <active>true</active>
    <description>If the Goodwill/Refund voucher tickboc is checked, user have to specify the amount.</description>
    <errorConditionFormula>GoodwillVoucherRefund__c = TRUE &amp;&amp; ISBLANK(VoucherAmount__c)</errorConditionFormula>
    <errorMessage>Please specify the amount of the voucher or refund.</errorMessage>
</ValidationRule>