force-app/main/default/objects/Case/listViews/all_open_cases.listView-meta.xml
<ListView>
    <fullName>all_open_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>BusinessArea__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notContain</operation>
        <value>Closed Without Action,Closed</value>
    </filters>
    <label>All Open Cases</label>
</ListView>