force-app/main/default/objects/Case/listViews/All_Open_Cases_Overseas.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases_Overseas</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>BusinessArea__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.European_Case_Record_Type</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notContain</operation>
        <value>Closed Without Action,Closed</value>
    </filters>
    <label>All Open Cases - Overseas</label>
</ListView>