force-app/main/default/objects/Case/listViews/all_open_cases_Your_booking_Conf.listView-meta.xml
<ListView>
    <fullName>all_open_cases_Your_booking_Conf</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Booking Confirmation</value>
    </filters>
    <label>all open cases - Your booking Conf</label>
</ListView>