force-app/main/default/objects/Case/listViews/Closed_Cases_all_time.listView-meta.xml
<ListView>
    <fullName>Closed_Cases_all_time</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>BusinessArea__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Closed Cases - all time</label>
</ListView>