force-app/main/default/objects/Case/listViews/Complaint_Cases.listView-meta.xml
<ListView>
    <fullName>Complaint_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>HybridMembershipNumber__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>BusinessArea__c</columns>
    <columns>CaseCategory__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Complaint</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed Without Action,Closed</value>
    </filters>
    <label>Complaint Cases</label>
</ListView>