force-app/main/default/objects/Case/listViews/Confidential.listView-meta.xml
<ListView>
    <fullName>Confidential</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Confidential_Case_Record_Type</value>
    </filters>
    <label>Confidential</label>
    <sharedTo>
        <group>Confidential_Cases</group>
    </sharedTo>
</ListView>