force-app/main/default/objects/Case/listViews/Customer_Service_Team_All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Team_All_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>BusinessArea__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notContain</operation>
        <value>Closed Without Action,Closed</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>donnab,mmara,jorr-,felvi,stayl,cjord,lswan,cda,lclif,Customer Service,Email to Case</value>
    </filters>
    <label>Customer Service Team - All Open Cases</label>
</ListView>