force-app/main/default/objects/Case/listViews/Email_to_Case_Case.listView-meta.xml
<ListView>
    <fullName>Email_to_Case_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Email to Case - All open cases</label>
    <queue>Email_to_Case</queue>
</ListView>