force-app/main/default/objects/Case/listViews/Enquiry_Cases.listView-meta.xml
<ListView>
    <fullName>Enquiry_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>HybridMembershipNumber__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CaseCategory__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Enquiry</value>
    </filters>
    <label>Enquiry Cases</label>
</ListView>