force-app/main/default/objects/Case/listViews/European_Enquiries_Case.listView-meta.xml
<ListView>
    <fullName>European_Enquiries_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>European Enquiries</label>
    <queue>European_Enquiries</queue>
</ListView>