force-app/main/default/objects/Case/listViews/European_Web_Enquiries.listView-meta.xml
<ListView>
    <fullName>European_Web_Enquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>BusinessArea__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notContain</operation>
        <value>Closed Without Action,Closed,Merged</value>
    </filters>
    <label>European Web Enquiries - All Open Cases</label>
    <queue>European_Enquiries</queue>
    <sharedTo>
        <group>Email_to_Case</group>
    </sharedTo>
</ListView>