force-app/main/default/objects/Case/listViews/High_Priority.listView-meta.xml
<ListView>
    <fullName>High_Priority</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.PRIORITY</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>High Priority</label>
</ListView>